# rules_kotlin_native

./: .gitignore  MODULE.bazel  README.md
examples/hello_world/: BUILD.bazel  HelloWorld.kt
examples/hello_world_cinterop/: BUILD.bazel  HelloWorld.kt  MODULE.bazel  hello_world.c  hello_world.def
kotlin_native/: BUILD.bazel  defs.bzl  extensions.bzl  kt_native_binary.bzl  kt_native_cinterop.bzl  kt_native_import.bzl  kt_native_library.bzl  kt_native_static_framework.bzl  kt_native_test.bzl  toolchains.bzl  versions.bzl
kotlin_native/internal/: cinterop.bzl  native.bzl  providers.bzl  settings.bzl
tools/: BUILD.bazel  KonancWrapper.java  KspCompiler.java
