module(
    name = "rules_kotlin_native",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "apple_support", version = "1.22.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift", version = "2.8.2", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_kotlin", version = "2.1.4")

kotlin_native = use_extension("//kotlin_native:extensions.bzl", "kotlin_native")
use_repo(kotlin_native, "kotlin_native_toolchains", "kotlin_native_ksp")

register_toolchains("@kotlin_native_toolchains//:all")
