load("@rules_kotlin_native//kotlin_native:kt_native_binary.bzl", "kt_native_binary")
load("@rules_kotlin_native//kotlin_native:kt_native_library.bzl", "kt_native_library")

kt_native_library(
    name = "hello_world_lib",
    srcs = ["HelloWorld.kt"],
)

kt_native_binary(
    name = "hello_world",
    srcs = ["main.kt"],
    deps = [
        ":hello_world_lib",
    ],
)
